--- a/src/pages/CreateNewDeck.css
+++ b/src/pages/CreateNewDeck.css
@@ -1,36 +1,16 @@
+.save-deck-container {
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    width: 40%;
+}
 
-.question-answer {
-    display: flex;
-    align-items: center;
-    margin-top: 10px;
-    width: 100%; 
-  }
-  
-  .question-answer-group {
-    flex: 1;
-    margin-right: 50px; 
-  }
-  
-  .question-answer-input {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 16px;
-    margin-bottom: 10px;
-    resize: vertical;
-    min-height: 100px;
-  }
-  
-  .delete-card {
-    background-color: #e74c3c;
-    color: #fff;
-    font-size: 12px;
-    padding: 5px 10px;
-    cursor: pointer;
-    width: 100%;
-  }
+.title h1 {
+    width: 40%;
+}
 
-  .save-deck {
-    margin-top: 40px;
-  }
+.save-button-top {
+    position: absolute;
+    top: 20px;
+    right: 0px;
+}
