--- a/src/pages/Folders.css
+++ b/src/pages/Folders.css
@@ -1,5 +1,6 @@
 .add-button {
-    margin-left: 15px;
+    margin-left: 1%;
+    width: 32%;
 }
 
 .delete-button {
@@ -17,7 +18,6 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 8px; /* Adjust as needed for spacing */
+    margin-bottom: 10px; 
 }
 
-/* Add any other styles you may need */
