--- a/src/pages/ViewAllDecks.css
+++ b/src/pages/ViewAllDecks.css
@@ -3,22 +3,30 @@
     flex-direction: column;
 }
 
-.title {
-    display: flex;
-    align-items: center;
-}
-
 .manage-folders-button-container {
     position: absolute;
     right: 0px;
-    width: 30%;
+    width: 50%;
     margin-bottom: 50px;
 }
 
 .manage-folders-button {
     position: absolute;
-    top: 0px;
+    top: 10px;
     right: 20px;
+}
+
+.folder-buttons-container {
+    display:flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    width: 100%;
+}
+
+.folder-buttons {
+    width: 30%;
 }
 
 .deck-container {
@@ -26,15 +34,6 @@
     flex-wrap: wrap;
     flex-direction: column;
     gap: 5px;
-}
-
-.title {
-    display: flex;
-    align-items: center;
-}
-
-.title h1 {
-    width: 20%;
 }
 
 .deck-list {
@@ -81,7 +80,7 @@ a {
     padding: 15px;
     margin: 10px;
     width: 20%;
-    height: 200px;
+    height: 240px;
     transition: width 0.3s ease;
 }
 
@@ -104,4 +103,16 @@ a {
 .deck-item:hover {
     background-color: #e74c3c;
     width: 20%;
+}
+
+.download-buttons-container {
+    display: flex;
+}
+
+.download-buttons {
+    width: 80%;
+}
+
+.flashcards-button {
+    min-height: 70px;
 }
